--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,73 +1,99 @@
-<div class="title">In Home!</div>
-
-<div class="table">
-    <p-table [columns]="cols" [value]="cars" selectionMode="single" [(selection)]="selectedCar" (onRowSelect)="onRowSelect($event)" [paginator]="true" [rows]="10">
-        <ng-template pTemplate="caption">
-            Vpn Requests
-        </ng-template>
-        <ng-template pTemplate="header" let-columns>
-            <tr>
-                <th *ngFor="let col of columns" [pSortableColumn]="col.field">
-                    {{col.header}}
-                    <p-sortIcon [field]="col.field"></p-sortIcon>
-                </th>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-rowData let-columns="columns">
-            <tr [pSelectableRow]="rowData">
-                <td *ngFor="let col of columns">
-                    {{rowData[col.field]}}
-                </td>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="summary" let-rowData>
-            <div style="text-align:left">
-                <button type="button" pButton icon="fa fa-plus" (click)="showDialogToAdd()" label="Add"></button>
-            </div>
-        </ng-template>    
-    </p-table>
-    <!--
-    <p-dialog header="Car Details" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true"  [style]="{width: '300px'}">
-        <div class="ui-g ui-fluid" *ngIf="car">
-            <div class="ui-g-12">
-                <div class="ui-g-4">
-                    <label for="vin">Vin</label>
-                </div>
-                <div class="ui-g-8">
-                    <input pInputText id="vin" [(ngModel)]="car.vin" />
-                </div>
-            </div>
-            <div class="ui-g-12">
-                <div class="ui-g-4">
-                    <label for="year">Year</label>
-                </div>
-                <div class="ui-g-8">
-                    <input pInputText id="year" [(ngModel)]="car.year" />
-                </div>
-            </div>
-            <div class="ui-g-12">
-                <div class="ui-g-4">
-                    <label for="brand">Brand</label>
-                </div>
-                <div class="ui-g-8">
-                    <input pInputText id="brand" [(ngModel)]="car.brand" />
-                </div>
-            </div>
-            <div class="ui-g-12">
-                <div class="ui-g-4">
-                    <label for="color">Color</label>
-                </div>
-                <div class="ui-g-8">
-                    <input pInputText id="color" [(ngModel)]="car.color" />
-                </div>
-            </div>
+<div class="container">
+    <div class="row mt-4">
+        <div class="col-md-6">
+                <p-table [columns]="cols" [value]="vpns" selectionMode="single" [(selection)]="selectedVpn" (onRowSelect)="onRowSelect($event)" [paginator]="true" [rows]="10">
+                        <ng-template pTemplate="caption">
+                            Vpn İstekleri
+                        </ng-template>
+                        <ng-template pTemplate="header" let-columns>
+                            <tr>
+                                <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+                                    {{col.header}}
+                                    <p-sortIcon [field]="col.field"></p-sortIcon>
+                                </th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-rowData let-columns="columns">
+                            <tr [pSelectableRow]="rowData">
+                                <td *ngFor="let col of columns">
+                                    {{rowData[col.field]}}
+                                </td>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="summary" let-rowData>
+                            <div style="text-align:left">
+                                <button type="button" pButton icon="fa fa-plus" (click)="showDialogToAdd()" label="Add"></button>
+                            </div>
+                        </ng-template>    
+                    </p-table>
+                    
+                    <p-dialog header="Vpn Detayları" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true"  [style]="{width: '300px'}">
+                        <div class="ui-g ui-fluid" *ngIf="vpn">
+                            <div class="ui-g-12">
+                                <div class="ui-g-4">
+                                    <label for="Kullanici_Adi">Kullanıcı Adı</label>
+                                </div>
+                                <div class="ui-g-8">
+                                    <input pInputText id="Kullanici_Adi" [(ngModel)]="vpn.Kullanici_Adi" />
+                                </div>
+                            </div>
+                            <div class="ui-g-12">
+                                <div class="ui-g-4">
+                                    <label for="Request_ID">Request ID</label>
+                                </div>
+                                <div class="ui-g-8">
+                                    <input pInputText id="Request_ID" [(ngModel)]="vpn.Request_ID" />
+                                </div>
+                            </div>
+                            <div class="ui-g-12">
+                                <div class="ui-g-4">
+                                    <label for="Baslangic_Tarihi">Başlangıç Tarihi</label>
+                                </div>
+                                <div class="ui-g-8">
+                                    <input pInputText id="Baslangic_Tarihi" [(ngModel)]="vpn.Baslangic_Tarihi" />
+                                </div>
+                            </div>
+                            <div class="ui-g-12">
+                                <div class="ui-g-4">
+                                    <label for="Bitis_Tarihi">Bitiş Tarihi</label>
+                                </div>
+                                <div class="ui-g-8">
+                                    <input pInputText id="Bitis_Tarihi" [(ngModel)]="vpn.Bitis_Tarihi" />
+                                </div>
+                            </div>
+                            <div class="ui-g-12">
+                                <div class="ui-g-4">
+                                    <label for="Talep_Acan">Talep Açan</label>
+                                </div>
+                                <div class="ui-g-8">
+                                    <input pInputText id="Talep_Acan" [(ngModel)]="vpn.Talep_Acan" />
+                                </div>
+                            </div>
+                            <div class="ui-g-12">
+                                <div class="ui-g-4">
+                                    <label for="Kullanici">Kullanıcı</label>
+                                </div>
+                                <div class="ui-g-8">
+                                    <input pInputText id="Kullanici" [(ngModel)]="vpn.Kullanici" />
+                                </div>
+                            </div>
+                            <div class="ui-g-12">
+                                <div class="ui-g-4">
+                                    <label for="Grup_Adi">Grup Adı</label>
+                                </div>
+                                <div class="ui-g-8">
+                                    <input pInputText id="Grup_Adi" [(ngModel)]="vpn.Grup_Adi" />
+                                </div>
+                            </div>
+                        </div>
+                        <p-footer>
+                            <div class="ui-dialog-buttonpane ui-helper-clearfix">
+                                <button type="button" pButton icon="fa fa-close" (click)="delete()" label="Delete"></button>
+                                <button type="button" pButton icon="fa fa-check" (click)="save()" label="Save"></button>
+                            </div>
+                        </p-footer>
+                    </p-dialog>
         </div>
-        <p-footer>
-            <div class="ui-dialog-buttonpane ui-helper-clearfix">
-                <button type="button" pButton icon="fa fa-close" (click)="delete()" label="Delete"></button>
-                <button type="button" pButton icon="fa fa-check" (click)="save()" label="Save"></button>
-            </div>
-        </p-footer>
-    </p-dialog>-->
+    </div>
 </div>
 
