--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -27,7 +27,7 @@
                         </ng-template>    
                     </p-table>
                     
-                    <p-dialog header="Vpn Detayları" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true"  [style]="{width: '300px'}">
+                    <p-dialog [style]="{'width':'600px'}" id="dialog" header="Vpn Detayları" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true"  >
                         <div class="ui-g ui-fluid" *ngIf="vpn">
                             <div class="ui-g-12">
                                 <div class="ui-g-4">
@@ -42,7 +42,7 @@
                                     <label for="Request_ID">Request ID</label>
                                 </div>
                                 <div class="ui-g-8">
-                                    <input pInputText id="Request_ID" [(ngModel)]="vpn.Request_ID" />
+                                    <input pInputText id="Request_ID" [(ngModel)]="vpn.Request_ID" [disabled]="disabled" />
                                 </div>
                             </div>
                             <div class="ui-g-12">
