All the neccessary themes is done. Calendar need to be edited.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,83 +22,77 @@
                         </ng-template>
                         <ng-template pTemplate="summary" let-rowData>
                             <div style="text-align:left">
-                                <button type="button" pButton icon="fa fa-plus" (click)="showDialogToAdd()" label="Ekle"></button>
+                                <button pButton type="button" (click)="showDialogToAdd()" label="Add" class="ui-button-raised"></button>
                             </div>
                         </ng-template>    
                     </p-table>
                     
-                    <p-dialog [style]="{'width':'900px'}" id="dialog" header="Vpn Detayları" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true" [dismissableMask]="true"  >
+                    <p-dialog [style]="{'width':'600px'}" id="dialog" header="Vpn Detayları" (onShow)="onDialogShow()" (onHide)="onDialogHide()" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true" [dismissableMask]="true"  >
                         <div class="ui-g ui-fluid" *ngIf="vpn">
                             <div class="ui-g-12">
-                                <div class="ui-g-4">
+                                <div class="ui-g-6">
                                     <label for="Kullanici_Adi">Kullanıcı Adı</label>
+                                    <input pInputText id="Kullanici_Adi" [(ngModel)]="vpn.Kullanici_Adi" [disabled]="disabledColumns" />
                                 </div>
-                                <div class="ui-g-8">
-                                    <input pInputText id="Kullanici_Adi" [(ngModel)]="vpn.Kullanici_Adi" [disabled]="disabled" />
-                                </div>
-                            </div>
-                            <div class="ui-g-12">
-                                <div class="ui-g-4">
+                                <div class="ui-g-6">
                                     <label for="Request_ID">Request ID</label>
-                                </div>
-                                <div class="ui-g-8">
-                                    <input pInputText id="Request_ID" [(ngModel)]="vpn.Request_ID" [disabled]="disabled" />
+                                    <input pInputText id="Request_ID" [(ngModel)]="vpn.Request_ID" [disabled]="disabledColumns" />
                                 </div>
                             </div>
+                            
                             <div class="ui-g-12">
-                                <div class="ui-g-4">
+                                <div class="ui-g-6">
                                     <label for="Baslangic_Tarihi">Başlangıç Tarihi</label>
+                                    <p-calendar  dataType="string"  dateFormat="dd.mm.yy" [(ngModel)]="vpn.Baslangic_Tarihi" [showIcon]="true"></p-calendar>
+                                    <!--<p-calendar [(ngModel)]="rangeDates" maxDate="" selectionMode="range" dataType="string"  dateFormat="dd.mm.yy" [showIcon]="true" [readonlyInput]="true"></p-calendar>-->
                                 </div>
-                                <div class="ui-g-8">
-                                    <p-calendar  dataType="string" dateFormat="dd.mm.yy" [(ngModel)]="vpn.Baslangic_Tarihi" [showIcon]="true"></p-calendar>
-                                </div>
-                            </div>
-                            <div class="ui-g-12">
-                                <div class="ui-g-4">
+                                <div class="ui-g-6">
                                     <label for="Bitis_Tarihi">Bitiş Tarihi</label>
-                                </div>
-                                <div class="ui-g-8">
-                                        <p-calendar  dataType="string" dateFormat="dd.mm.yy" [(ngModel)]="vpn.Bitis_Tarihi" [showIcon]="true"></p-calendar>
+                                    <p-calendar  dataType="string" dateFormat="dd.mm.yy" [(ngModel)]="vpn.Bitis_Tarihi" [showIcon]="true"></p-calendar>
                                 </div>
                             </div>
                             <div class="ui-g-12">
-                                <div class="ui-g-4">
+                                <div class="ui-g-6">
                                     <label for="Talep_Acan">Talep Açan</label>
+                                    <input pInputText id="Talep_Acan" [(ngModel)]="vpn.Talep_Acan" [disabled]="disabledColumns"/>
                                 </div>
-                                <div class="ui-g-8">
-                                    <input pInputText id="Talep_Acan" [(ngModel)]="vpn.Talep_Acan" [disabled]="disabled"/>
-                                </div>
-                            </div>
-                            <div class="ui-g-12">
-                                <div class="ui-g-4">
+                                <div class="ui-g-6">
                                     <label for="Kullanici">Kullanıcı Tipi</label>
-                                </div>
-                                <div class="ui-g-8">
-                                        <p-selectButton [options]="types" [(ngModel)]="vpn.KullaniciType" [disabled]="disabled"></p-selectButton>
-                                        <!--<p>Selected Type: <span style="font-weight: bold">{{vpn.KullaniciType}} Kullanıcı</span></p>-->
+                                    <p-selectButton [options]="types" [(ngModel)]="vpn.KullaniciType" [disabled]="disabledColumns"></p-selectButton>
                                 </div>
                             </div>
                             <div class="ui-g-12">
-                                <div class="ui-g-4">
-                                    <label for="Grup_Adi">Grup Adı</label>
+                                <div class="ui-g-9" *ngIf="vpnGrupVisible">
+                                    
+                                    <p-pickList  [source]="sourceVpnGroup" [target]="vpn.Grup_Adi" sourceHeader="Mevcut Grup" targetHeader="Seçili Grup" dragdrop="true" [showSourceControls]="false" [showTargetControls]="false" [responsive]="true">
+                                        <ng-template let-list pTemplate="item">
+                                            <div class="ui-helper-clearfix">
+                                                <div style="font-size:14px;float:left;margin:0px 0px 0 0">{{list}}</div>
+                                            </div>
+                                        </ng-template>
+                                    </p-pickList>
+
                                 </div>
-                                <div class="ui-g-8">
-                                        <p-pickList [source]="list1" [target]="list2" [showSourceControls]="false" [showTargetControls]="false" [responsive]="true">
-                                                <ng-template let-car pTemplate="item">
-                                                    <div class="ui-helper-clearfix">
-                                                        <img src="assets/showcase/images/demo/car/{{car.brand}}.png" style="display:inline-block;margin:2px 0 2px 2px" width="48">
-                                                        <div style="font-size:14px;float:right;margin:15px 5px 0 0">{{car.brand}} - {{car.year}} - {{car.color}}</div>
-                                                    </div>
-                                                </ng-template>
-                                            </p-pickList>
-                                    <button styleClass="grupTalepButton" pButton type="button" label="Grup Talebi" class="ui-button-raised ui-button-warning"></button>
+
+                                <div class="ui-g-9" *ngIf="!vpnGrupVisible">
+                                        <p-card header="VPN Grup Talebi" [style]="{width: '360px'}" styleClass="ui-card-shadow">
+                                                <div class="ui-g-12"><p-checkbox name="group1" value="firewall" label="Firewall Talebi" [(ngModel)]="selectedValues" inputId="ny"></p-checkbox></div>
+                                                <div class="ui-g-12"><p-checkbox name="group1" value="vpnClient" label="VPN Client Gerekli" [(ngModel)]="selectedValues" inputId="sf"></p-checkbox></div>
+                                                <p-footer>
+                                                    <button pButton type="button" label="Send" class="ui-button-raised"></button>
+                                                    <button pButton type="button" (click)="gTalepClick()" label="Close" class="ui-button-raised ui-button-secondary"></button>
+                                                </p-footer>
+                                            </p-card>
+                                </div>
+                                <div class="ui-g-3">
+                                        <button pButton type="button" (click)="gTalepClick()" label="Grup Talebi" class="ui-button-raised ui-button-warning"></button>
                                 </div>
                             </div>
                         </div>
                         <p-footer>
                             <div class="ui-dialog-buttonpane ui-helper-clearfix">
-                                <button type="button" pButton icon="fa fa-close" (click)="delete()" label="Delete"></button>
-                                <button type="button" pButton icon="fa fa-check" (click)="save()" label="Save"></button>
+                                <button pButton type="button" icon="pi pi-times" (click)="delete()" label="Delete" class="ui-button-raised ui-button-danger"></button>
+                                <button pButton type="button" icon="pi pi-check" (click)="save()" label="Save" class="ui-button-raised"></button>
                             </div>
                         </p-footer>
                     </p-dialog>
